[REFACTOR]: web-ui: fix form item alignment

--- a/packages/web-ui/src/core/Form/index.less
+++ b/packages/web-ui/src/core/Form/index.less
@@ -19,6 +19,10 @@
             text-align: right;
             width: 100px;
 
+            > label {
+                vertical-align: middle;
+            }
+
             > label::after {
                 content: ":";
                 position: relative;
@@ -57,7 +61,9 @@
                 width: 100%;
                 display: inline-flex;
                 align-content: flex-start;
+                align-items: center;
                 flex-wrap: wrap;
+                vertical-align: middle;
             }
 
             &.has-error {
@@ -140,7 +146,6 @@
 
                 .g-form-item-children-inputs {
                     flex-wrap: nowrap;
-                    vertical-align: top;
                 }
 
                 .ant-select {
